--- a/benchmark/Hardsoft.BruteForcer.Benchmarks/Hardsoft.BruteForcer.Benchmarks.csproj
+++ b/benchmark/Hardsoft.BruteForcer.Benchmarks/Hardsoft.BruteForcer.Benchmarks.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFrameworks>net7.0</TargetFrameworks>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="BenchmarkDotNet" Version="0.13.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\src\Hardsoft.BruteForcer\Hardsoft.BruteForcer.csproj" />
+	</ItemGroup>
 
 </Project>
