--- a/src/Hardsoft.BruteForcer/Hardsoft.BruteForcer.csproj
+++ b/src/Hardsoft.BruteForcer/Hardsoft.BruteForcer.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.1" />
 	  <PackageReference Include="System.Memory" Version="4.5.5" />
 	</ItemGroup>
 
